--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  user-select: none; // 禁止选中文字
 }
 
 html,
@@ -9,4 +10,15 @@ body,
 #app {
   width: 100%;
   height: 100%;
+}
+
+/*滚动条整体样式*/
+::-webkit-scrollbar {
+  /*高宽分别对应横竖滚动条的尺寸*/
+  width: 6px;
+}
+/*滚动条里面滑块*/
+::-webkit-scrollbar-thumb {
+  background-color: #cccccc;
+  border-radius: 8px;
 }
